[package]
name = "tracing-timetree"
version = "0.1.0"
edition = "2024"
description = "Streaming tracing layer that prints an indented span tree with elapsed + self-time per close, with an absolute min-duration filter."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jakobhellermann/tracing-timetree"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
